--- a/Ex02.md
+++ b/Ex02.md
@@ -1,7 +1,7 @@
 # Ex. No : 2	
 # IMPLEMENTATION OF SYMBOL TABLE 
-## Register Number :
-## Date : 
+## Register Number : 212222040122
+## Date : 14.02.2024
 
 ## AIM   
 To write a C program to implement a symbol table.
@@ -17,9 +17,62 @@ To write a C program to implement a symbol table.
 8.	Stop the program. 
 
 ## PROGRAM
+```
+#include <stdio.h>
+#include <string.h>
+#include <ctype.h>
 
+int main()
+{
+    char expression[20];
+    int i = 0, x = 0, n, flag = 0;
+    void *add[5];
+    char d[15], c, srch;
+
+    printf("Enter the Expression: ");
+    scanf("%s", expression);
+
+    n = strlen(expression);
+
+    printf("Given Expression: %s\n", expression);
+
+    printf("Symbol Table\n");
+    printf("Symbol\taddr\ttype\n");
+    while (i < n)
+    {
+        c = expression[i];
+        if (isalpha(c))
+        {
+            add[x] = &expression[i];
+            d[x] = c;
+            printf("%c\t%p\tidentifier\n", c, (void *)&expression[i]);
+            x++;
+        }
+        i++;
+    }
+
+    printf("\nThe symbol to be searched: ");
+    scanf(" %c", &srch);
+    for (i = 0; i < x; i++)
+    {
+        if (srch == d[i])
+        {
+            printf("\nSymbol Found");
+            printf("\n%c\t@address %p\n", srch, (void *)add[i]);
+            flag = 1;
+            break;
+        }
+    }
+
+    if (flag == 0)
+        printf("\nSymbol Not Found");
+
+    return 0;
+}
+```
 
 ## OUTPUT 
+![image](https://github.com/Praveenanagaraji22/19CS409-Compiler-Design-Lab/assets/119393514/a7feb1a0-314a-44a6-a807-d3dd2f36624d)
 
 ## RESULT
 The program to implement a symbol table is executed and the output is verified.
