--- a/Ex09.md
+++ b/Ex09.md
@@ -1,7 +1,8 @@
+
 # Ex. No : 9	
 # IMPLEMENTATION OF THE BACK END OF THE COMPILER 
-## Register Number :
-## Date : 
+## Register Number : 212222040122
+## Date : 03.04.2024
 
 ## AIM   
 To write a program to implement the back end of the compiler.
@@ -15,9 +16,53 @@ To write a program to implement the back end of the compiler.
 6.	Stop the program.
 
 ## PROGRAM
+## Program: program.c file
+```
+#include <stdio.h>
+#include <ctype.h>
+#include <stdlib.h>
 
+int main() {
+    int i = 2, j = 0, k = 2, k1 = 0;
+    char ip[10], kk[10];
+    FILE *fp;
+
+    printf("Enter the filename of the intermediate code: ");
+    scanf("%s", kk);
+
+    fp = fopen(kk, "r");
+    if (fp == NULL) {
+        printf("\nError in opening the file\n");
+        return 1;
+    }
+
+    printf("\nStatement\tTarget Code\n\n");
+    while (fscanf(fp, "%s", ip) != EOF) {
+        printf("%s\tMOV %c,R%d SUB ", ip, ip[i + k], j);
+
+        if (ip[i + 1] == '+')
+            printf("ADD ");
+        else
+            printf("SUB ");
+
+        if (islower(ip[i]))
+            printf("%c,R%d\n", ip[i + k1], j);
+        else
+            printf("%c,%c\n", ip[i], ip[i + 2]);
+
+        j++;
+        k1 = 2;
+        k = 0;
+    }
+
+    fclose(fp);
+
+    return 0;
+}
+```
 
 ## OUTPUT 
+![image](https://github.com/AnnBlessy/19CS409-Compiler-Design-Lab/assets/119477835/a86d80de-e3d2-46ca-b533-95618228935e)
 
 ## RESULT
 The back end of the compiler is implemented successfully, and the output is verified.
